@@ -11,9 +11,10 @@ import com.newrelic.jfr.MethodSupport;
 import com.newrelic.jfr.Workarounds;
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.events.Event;
+import java.time.Duration;
+import java.util.Collections;
 import java.util.List;
 import jdk.jfr.consumer.RecordedEvent;
-import jdk.jfr.consumer.RecordedMethod;
 
 // jdk.Compilation {
 //        startTime = 16:04:14.403
@@ -32,15 +33,15 @@ public class JITCompilationMapper implements EventToEvent {
 
   @Override
   public List<Event> apply(RecordedEvent event) {
-    var timestamp = event.getStartTime().toEpochMilli();
-    var duration = event.getDuration();
-    var attr = new Attributes();
-    attr.put("desc", MethodSupport.describeMethod((RecordedMethod) event.getValue("method")));
+    long timestamp = event.getStartTime().toEpochMilli();
+    Duration duration = event.getDuration();
+    Attributes attr = new Attributes();
+    attr.put("desc", MethodSupport.describeMethod(event.getValue("method")));
     attr.put("thread.name", event.getThread("eventThread").getJavaName());
     attr.put("duration", duration.toMillis());
     attr.put("succeeded", Workarounds.getSucceeded(event));
 
-    return List.of(new Event("JfrCompilation", attr, timestamp));
+    return Collections.singletonList(new Event("JfrCompilation", attr, timestamp));
   }
 
   @Override
