@@ -7,12 +7,12 @@
 
 package com.newrelic.jfr.tometric;
 
-import static java.util.concurrent.TimeUnit.SECONDS;
-
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.metrics.Gauge;
 import com.newrelic.telemetry.metrics.Metric;
 import java.time.Duration;
+import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import jdk.jfr.consumer.RecordedEvent;
@@ -22,9 +22,9 @@ public class OverallCPULoadMapper implements EventToMetric {
 
   @Override
   public List<? extends Metric> apply(RecordedEvent ev) {
-    var timestamp = ev.getStartTime().toEpochMilli();
-    var attr = new Attributes();
-    return List.of(
+    long timestamp = ev.getStartTime().toEpochMilli();
+    Attributes attr = new Attributes();
+    return Arrays.asList(
         new Gauge("jfr.CPULoad.jvmUser", ev.getDouble("jvmUser"), timestamp, attr),
         new Gauge("jfr.CPULoad.jvmSystem", ev.getDouble("jvmSystem"), timestamp, attr),
         new Gauge("jfr.CPULoad.machineTotal", ev.getDouble("machineTotal"), timestamp, attr));
@@ -37,6 +37,6 @@ public class OverallCPULoadMapper implements EventToMetric {
 
   @Override
   public Optional<Duration> getPollingDuration() {
-    return Optional.of(Duration.of(1, SECONDS.toChronoUnit()));
+    return Optional.of(Duration.of(1, ChronoUnit.SECONDS));
   }
 }
